added scoped searches, ranked pages and the results page

--- a/search_engine/static/css/3-pages/_search-search.sass
+++ b/search_engine/static/css/3-pages/_search-search.sass
@@ -24,7 +24,6 @@
 
 .flashes
     list-style: none
-    width: 150px
     color: $maroon
     background-color: $light-red
     margin-left: 30px
@@ -33,7 +32,7 @@
     border: 1px solid $maroon
     padding-top: 2px
     text-align: center
-    padding: 0
+    padding: 0 3px
 
 .result_count
     float: right
@@ -90,4 +89,29 @@
 
 .detailed_view
     display: none
+    
+.search_options
+    margin: 3px
+    height: 15px
+
+.search_options .so_heading
+    font-weight: bold
+
+.search_options label
+    font-style: italic
+
+.search_options input
+    padding-top: 5px
+    margin-right: 10px
+    margin-left: 5px
+
+.col1
+    float: left
+
+.col2
+    float: right
+
+
+
+
 
