--- a/search_engine/static/css/3-pages/_search-home.sass
+++ b/search_engine/static/css/3-pages/_search-home.sass
@@ -13,5 +13,25 @@
 
 .search_home_submit
     width: 40%
-
     
+.search_options
+    margin: 3px
+    height: 15px
+    width: 100%
+
+.search_options .so_heading
+    font-weight: bold
+
+.search_options label
+    font-style: italic
+
+.search_options input
+    padding-top: 5px
+    margin-right: 10px
+    margin-left: 5px
+
+.left
+    float: left
+
+.right
+    float: right
