--- a/search_engine/templates/search.html
+++ b/search_engine/templates/search.html
@@ -7,6 +7,10 @@
         <script src="{{ url_for('static', filename='js/functions.js') }}" type="text/javascript"></script>
     </head>
     <body>
+        <div class="nav">
+            <a href="/">Home</a>
+            <a href="/nevisual">Named Entity Visualiser</a>
+        </div>
         <div class="top_bar">
             <form method="POST" action="{{ url_for('search') }}">
                 <div class="col1">
@@ -52,7 +56,7 @@
                         {% endif %}
                         
                         {% if scope=="sentence" %}
-                        
+                            <a href="{{ url_for('result', art_id=article[0]._id, pnum=article[3].paragraph_number, snum=article[3].sentence_number, scope=scope, ne=ne, ee=ee, query=query) }}">{{article[0].title}}</a>
                         {% endif %}
                         
                         {% if scope=="article" %}
@@ -75,7 +79,14 @@
                         {% endif %}
                         
                         {% if scope=="sentence" %}
-                            Hello World
+                        <!--[[article, analysis, score, sent, sent_anal]]-->
+                            <span class="stat">Paragraph Number: {{article[4].paragraph_number}}</span>
+                            <span class="stat">Sentence Number: {{article[4].sentence_number}}</span>
+                            <span class="stat">Word Count: {{article[4].total_sentence_word_count}}</span>
+                            <span class="stat">Indicator Count: {{article[4].total_sentence_indicator_count}}</span>
+                            <span class="stat">Percentage: {{article[4].percentage_wc_totalSentIncCount}}</span>
+                            <span class="stat">Ranking: {{article[2]}}</span>
+                            <span class="more_info"><a href="{{article[0].url}}" target="_blank">Visit page</a></span>
                         {% endif %}
                         
                         {% if scope=="article" %}
@@ -86,24 +97,24 @@
                             <span class="more_info"><button id="detail_button" type="button" onclick="toggleVisibility('{{article[0]._id}}')">More Info</button></span>
                         {% endif %}
                     </div>
-                    <div class="detailed_view" id="{{article[0]._id}}">
-                        <table>
-                            <tr class="thead">
-                                <td>Indicator</td>
-                                <td>Count</td>
-                                <td>Percentage</td>
-                            </tr>
-                            {% for key in article[1] %}
-                                {% if article[1][key].percentage %}
-                                    <tr>
-                                        <td class="trhead">{{key}}</td>
-                                        <td>{{article[1][key].count}}</td>
-                                        <td>{{article[1][key].percentage}}</td>
-                                    </tr>
-                                {% endif %}
-                            {% endfor %}
-                        </table>
-                    </div>
+                    <!--<div class="detailed_view" id="{{article[0]._id}}">-->
+                    <!--    <table>-->
+                    <!--        <tr class="thead">-->
+                    <!--            <td>Indicator</td>-->
+                    <!--            <td>Count</td>-->
+                    <!--            <td>Percentage</td>-->
+                    <!--        </tr>-->
+                    <!--        {% for key in article[1] %}-->
+                    <!--            {% if article[1][key].percentage %}-->
+                    <!--                <tr>-->
+                    <!--                    <td class="trhead">{{key}}</td>-->
+                    <!--                    <td>{{article[1][key].count}}</td>-->
+                    <!--                    <td>{{article[1][key].percentage}}</td>-->
+                    <!--                </tr>-->
+                    <!--            {% endif %}-->
+                    <!--        {% endfor %}-->
+                    <!--    </table>-->
+                    <!--</div>-->
                 </div>
             {% endfor %}
         </div>
