--- a/search_engine/static/css/3-pages/_search-search.sass
+++ b/search_engine/static/css/3-pages/_search-search.sass
@@ -111,6 +111,37 @@
 .col2
     float: right
 
+.pagination
+    width: 100%
+    text-align: left
+
+.pagination ul
+    display: inline-block
+    padding: 0
+    margin: 0
+
+.pagination ul li
+    display: inline
+
+.pagination ul li a
+    color: $gray
+    float: left
+    padding: 8px 16px
+    text-decoration: none
+
+.pagination ul li a.active
+    background-color: $orange
+    color: $white
+
+.pagination ul li a:hover:not(.active)
+    background-color: $light-gray
+
+.spacer
+    height: 30px
+    margin-bottom: 20px
+
+
+
 
 
 
